// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Item should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1672nzs-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="https://example.com"
  >
    <div
      class="css-17dowui-AuthorListItemImageWrapper ersskp41"
    >
      <img
        alt="DSC07717"
        class="css-w10vzd-ImageWrapper-AuthorListItem e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-1f3530-AuthorListItemContent ersskp40"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways extra-classname css-1672nzs-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="https://example.com"
  >
    <div
      class="css-17dowui-AuthorListItemImageWrapper ersskp41"
    >
      <img
        alt="DSC07717"
        class="css-w10vzd-ImageWrapper-AuthorListItem e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-1f3530-AuthorListItemContent ersskp40"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1672nzs-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="https://example.com"
  >
    <div
      class="css-17dowui-AuthorListItemImageWrapper ersskp41"
    >
      <img
        alt="DSC07717"
        class="css-w10vzd-ImageWrapper-AuthorListItem e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-1f3530-AuthorListItemContent ersskp40"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1672nzs-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="https://example.com"
  >
    <div
      class="css-17dowui-AuthorListItemImageWrapper ersskp41"
    />
    <div
      class="css-1f3530-AuthorListItemContent ersskp40"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1672nzs-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="https://example.com"
  >
    <div
      class="css-17dowui-AuthorListItemImageWrapper ersskp41"
    >
      <img
        alt="DSC07717"
        class="css-w10vzd-ImageWrapper-AuthorListItem e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-1f3530-AuthorListItemContent ersskp40"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
      >
        Foobar
      </h6>
    </div>
  </a>
</DocumentFragment>
`;
